--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -20,11 +21,13 @@
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "http-status-codes": "^2.2.0",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.10.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
