--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emoji-mart/react": "^1.1.1",
+    "@headlessui/react": "^1.7.14",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -29,11 +30,14 @@
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.10.1",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
