--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "http-status-codes": "^2.2.0",
+    "lodash": "^4.17.21",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.10.1",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.194",
     "prisma": "^4.14.0"
   }
 }
